...

	<!-- Actions & Button Labels -->
	<!-- ======================= -->

	<string name="yes_button_label">Yes</string>
	<string name="no_button_label">No</string>
	<string name="ok">OK</string>
	<string name="str_next">Next &gt;&gt;</string>
	<string name="str_previous">&lt;&lt; Previous</string>
	<string name="str_page_info">Page {0} of {1}</string>
	<string name="refresh">Refresh</string>
	<string name="return_to_register">Return</string>

...


	<!-- Forms & Inputs -->
	<!-- ============== -->

	<string name="error_field_required">This field is required</string>
	<string name="form_update_title">Form Update</string>
	<string name="form_update_message">This form has content updates</string>
	<string name="current_corrupted_form">(Current Corrupted Form)</string>
	<string name="rollback_dialog_title">Select a rollback form</string>
	<string name="cannot_select_corrupted_form_rollback">You cannot select this form because it\'s corrupted!</string>
	<string name="form_changed_reopen_to_take_effect">Form has been successfully selected! Reopen this form for the changes to take effect</string>
	<string name="component_desc_image_upload_service">Uploads images to the OpenSRP server</string>
...


	<!-- Form: Quick Check -->
	<!-- ================== -->

	<string name="reason_for_coming_facility"><font fgcolor="black">Reason for coming to facility? </font><font fgcolor="red">*</font></string>
	<string name="first_contact">First contact</string>
	<string name="scheduled_contact">Scheduled contact</string>
	<string name="specific_complaint">Specific complaint</string>
	<string name="specific_complaints"><font fgcolor="black">Specific complaint(s) </font><font fgcolor="red">*</font></string>
	<string name="abnormal_discharge">Abnormal vaginal discharge</string>
	<string name="altered_skin_color">Altered skin colour</string>
	<string name="changes_in_bp">Changes in blood pressure</string>
...
