...
        android:layout_marginTop="7dp"
        android:layout_marginBottom="7dp"
        android:layout_weight="1.3"
        android:orientation="vertical">

        <org.smartregister.view.customcontrols.CustomFontTextView
            android:id="@+id/patient_name"
            style="@style/CustomFontTextViewStyle.ClientList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:padding="2dp"
            android:text="Patient Name"
...
                android:textColor="@color/dark_grey_text"
                android:textSize="16sp" />
        </RelativeLayout>
    </android.support.constraint.ConstraintLayout>

    <LinearLayout
        android:id="@+id/due_button_wrapper"
        android:layout_width="0dp"
        android:layout_height="@dimen/register_list_item_height"
        android:layout_marginStart="7dp"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="7dp"
        android:layout_weight="0.7"
...
