<?xml version="1.0" encoding="utf-8"?>

<LinearLayout android:layout_width="match_parent"
    android:layout_height="?android:attr/actionBarSize"
    android:background="@android:color/transparent"
    android:orientation="horizontal"
    xmlns:android="http://schemas.android.com/apk/res/android">

        <ImageButton
            android:id="@+id/contact_menu"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_contact_menu" />

        <org.smartregister.view.customcontrols.CustomFontTextView
            android:id="@+id/contact_title"
            style="@style/CustomFontTextViewStyle.Anc.ClientList"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/patients_name_margin"
            android:layout_toEndOf="@+id/contact_menu"
            android:background="@android:color/transparent"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/contact_drawable_padding"
            android:paddingEnd="@dimen/contact_drawable_padding"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textSize="@dimen/contact_toolbar_text_size" />

    </LinearLayout>