...
        android:layout_height="@dimen/ec_main_header_search_layout_height"
        android:layout_marginLeft="@dimen/register_search_bar_margin"
        android:layout_marginRight="@dimen/register_search_bar_min_margin"
        android:layout_weight="1.5">

        <EditText
            android:id="@+id/edt_search"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_marginRight="0dp"
            android:background="@drawable/grey_edit_text_shape"
            android:ellipsize="end"
...
