...
    <string name="dose_d">DOSE (D)</string>
    <string name="id">ID</string>
    <string name="patient_location">Location: %1$s</string>
    <string name="dose_given_date">Dose %1$s given %2$s</string>


    <string name="unauthorized">Please check the credentials</string>
    <string name="unauthorized_group">Your user group is not allowed to access this device</string>
    <string name="unknown_response">login failed. Try later</string>
    <string name="no_internet_connectivity">No internet connection. Please ensure data connectivity</string>
    <string name="login_text">Log In</string>
    <string name="show_password_text">Show password</string>
    <string name="complete">Complete</string>
...
